--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 <div class="container">
   <br>
   <br>
-<p1> Welcome to Docu Searcher - try to find something....</p1>
+<p1> Welcome to Docu Searcher - try to find something...</p1>
 </div>
 
 {% endblock %}
