--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -11,6 +11,54 @@
 {% else %}
 <br>
 <br>
-<h1>results</h1>
+<div class="container-fluid">
+  <br>
+  <br>
+  <br>
+  <h1>Files Library</h1>
+  <div class="card mb-4 shadow-sm">
+
+        <div class="table-responsive">
+        <table class="table table-striped table-sm">
+          <thead>
+            <tr>
+              <th>File</th>
+              <th>Pages mentioned</th>
+              <th>actions</th>
+            </tr>
+          </thead>
+          <tbody>
+              {% if results %}
+
+               {% for key, value in results.items() %}
+              <tr>
+                <td>
+                 <a href="{{ key }}">
+                     <embed src="{{ key }}" width="100px" height="120px"  />
+                     <p>{{ key }}</p>
+                 </a>
+                </td>
+                <td>
+                    {% for match in value %}
+                    <p>{{match['page']}}</p>
+                    {% endfor %}
+
+                </td>
+                <td>
+                    <a href="/getdocument/{{ key }}" download=""><button >Download!</button></a>
+                </td>
+              </tr>
+                {% endfor %}
+
+               {% endif %}
+          </tbody>
+        </table>
+
+
+
+
+</div>
+</div>
+</div>
 {%endif%}
 {%endblock%}
