--- a/templates/documents.html
+++ b/templates/documents.html
@@ -22,7 +22,7 @@
       <div class="card-body">
         <form id="fUpload" action="uploaddocument" method="post" enctype="multipart/form-data">
           <label for="long_url">Select Document</label>
-          <input type="file" class="form-control" name="file" id="file" required>
+          <input type="file" class="form-control" name="file" multiple id="file" required>
           <br>
           <button class="btn btn-primary btn-lg btn-block" type="submit">Upload</button>
         </form>
